[gd_scene load_steps=14 format=3 uid="uid://bray8m7es3vmk"]

[ext_resource type="Script" path="res://scripts/controller_menu.gd" id="1_pr6vu"]
[ext_resource type="Texture2D" uid="uid://dego5l4bpuk4q" path="res://assets/sprites/background/main_mnu_bg.png" id="2_0q1oy"]
[ext_resource type="FontFile" uid="uid://dfipgheaimk53" path="res://assets/fonts/Medici Text.ttf" id="2_m7xrd"]
[ext_resource type="Theme" uid="uid://btuadhest44h3" path="res://themes/ui_default.tres" id="3_dt8tr"]
[ext_resource type="Texture2D" uid="uid://8k8bivlb2ybi" path="res://assets/sprites/ui/buttons-v2.png" id="4_kgi8b"]
[ext_resource type="AudioStream" uid="uid://ce4nn0so3cl1m" path="res://assets/music/VENDOR QUEST V2.mp3" id="5_4s316"]

[sub_resource type="Animation" id="Animation_drcls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/FadeCover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CenterScreen/ButtonsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/FullRect/VersionNumber:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/CenterScreen/TitleContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(240, 8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/CenterScreen/TitleContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_umxfu"]
resource_name = "menu_exit_animate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/FadeCover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -80.0]
}

[sub_resource type="Animation" id="Animation_1cvty"]
resource_name = "menu_start_animate"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/FadeCover:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CenterScreen/ButtonsContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 2),
"transitions": PackedFloat32Array(0.5, 0.89),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/FullRect/VersionNumber:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/CenterScreen/TitleContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 1.6, 2),
"transitions": PackedFloat32Array(0.89, 0.5, 0.89),
"update": 0,
"values": [Vector2(-480, -1160), Vector2(-480, -672), Vector2(-480, -800)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/CenterScreen/TitleContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1.6),
"transitions": PackedFloat32Array(0.965936, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.5, 0.89),
"update": 0,
"values": [-80.0, -10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhjyn"]
_data = {
"RESET": SubResource("Animation_drcls"),
"menu_exit_animate": SubResource("Animation_umxfu"),
"menu_start_animate": SubResource("Animation_1cvty")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bw5bm"]
content_margin_bottom = 55.0
texture = ExtResource("4_kgi8b")
texture_margin_left = 40.0
texture_margin_top = 35.0
texture_margin_right = 40.0
texture_margin_bottom = 45.0
region_rect = Rect2(133, 513, 494, 400)
modulate_color = Color(0.94902, 0.94902, 0.94902, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gkejg"]
content_margin_bottom = 55.0
texture = ExtResource("4_kgi8b")
texture_margin_left = 40.0
texture_margin_top = 35.0
texture_margin_right = 40.0
texture_margin_bottom = 45.0
region_rect = Rect2(133, 513, 494, 400)
modulate_color = Color(0.894118, 0.894118, 0.894118, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lu5a4"]
content_margin_bottom = 55.0
texture = ExtResource("4_kgi8b")
texture_margin_left = 40.0
texture_margin_top = 35.0
texture_margin_right = 40.0
texture_margin_bottom = 45.0
region_rect = Rect2(133, 513, 494, 400)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_pr6vu")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vhjyn")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4s316")
autoplay = true
parameters/looping = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1774.0
offset_right = 1922.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0q1oy")
metadata/_edit_lock_ = true

[node name="FullRect" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VersionNumber" type="Label" parent="CanvasLayer/FullRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -251.0
offset_top = -157.0
offset_right = 251.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_dt8tr")
text = "Version: Prototype"

[node name="CenterScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="VBoxContainer" parent="CanvasLayer/CenterScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 240.0
offset_top = 8.0
offset_right = 1200.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/CenterScreen/TitleContainer"]
custom_minimum_size = Vector2(960, 640)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.427451)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_offset_x = -16
theme_override_constants/shadow_outline_size = 56
theme_override_fonts/normal_font = ExtResource("2_m7xrd")
theme_override_font_sizes/normal_font_size = 326
bbcode_enabled = true
text = "Vendor
	Quest"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="CanvasLayer/CenterScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -41.505
offset_right = 247.0
offset_bottom = 570.495
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 36
alignment = 1
metadata/_edit_group_ = true

[node name="PlayButton" type="Button" parent="CanvasLayer/CenterScreen/ButtonsContainer"]
custom_minimum_size = Vector2(450, 252)
layout_mode = 2
theme = ExtResource("3_dt8tr")
text = "START"

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterScreen/ButtonsContainer"]
custom_minimum_size = Vector2(450, 252)
layout_mode = 2
theme = ExtResource("3_dt8tr")
theme_override_styles/hover = SubResource("StyleBoxTexture_bw5bm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gkejg")
theme_override_styles/normal = SubResource("StyleBoxTexture_lu5a4")
text = "QUIT"

[node name="FadeCover" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[connection signal="pressed" from="CanvasLayer/CenterScreen/ButtonsContainer/PlayButton" to="." method="_transition_to_intro"]
[connection signal="pressed" from="CanvasLayer/CenterScreen/ButtonsContainer/QuitButton" to="." method="_quit_game"]
